--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 			canvas error
 		</canvas>
     <script src="core/core.js"></script>
+    <script src="game/game.js"></script>
 		<script src="main.js"></script>
 	</body>
 </html>
