--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <html>
 	<head>
     <link rel="stylesheet" href="main.css">
+    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
 	</head>
 	<body>
 		<canvas id="canvas" width="512px" height="512px" id="canvas">
