--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 <html>
 	<head>
     <link rel="stylesheet" href="main.css">
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
+    <meta name="viewport" content="user-scalable=no, width=device-width, initial-scale=1.0, maximum-scale=1.0" />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	</head>
 	<body>
 		<canvas id="canvas" width="512px" height="512px" id="canvas">
