--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
     <link rel="stylesheet" href="main.css">
-    <meta name="viewport" content="initial-scale=1.0, maximum-scale=1.0, user-scalable=no, target-densitydpi=device-dpi" />
+    <meta name="viewport" content="width=device-width, initial-scale=0.5, user-scalable=no" />
     <meta name="apple-mobile-web-app-capable" content="yes" />
     <meta name="apple-mobile-web-app-status-bar-style" content="black" />
 	</head>
